--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,7 +1,11 @@
 <html>
-    <head></head>
-    <header style="color: #FF0000; height: 70px; width: 100%;"></header>
-    <body>
-        <footer style="color:#00FF00; height: 60px; width: 100%;">Best School</footer>
+    <head>
+        <title>AirBnB Clone</title>
+    </head>
+    <body style="margin:0; padding:0;">
+        <header style="background-color: #FF0000; height: 70px; width: 100%;"></header>
+        <footer style="background-color:#00FF00; height: 60px; width: 100%; position: absolute; bottom:0; text-align: center; line-height: 60px;">
+            Best School
+        </footer>
     </body>
 </html>
