--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,6 +1,9 @@
 <html>
     <head>
         <title>AirBnB Clone</title>
+        <link rel="stylesheet" href="styles/3-common.css">
+        <link rel="stylesheet" href="styles/3-footer.css">
+        <link rel="stylesheet" href="styles/3-header.css">
     </head>
     <body>
         <header></header>
