--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -4,9 +4,14 @@
         <link rel="stylesheet" href="styles/3-common.css">
         <link rel="stylesheet" href="styles/3-footer.css">
         <link rel="stylesheet" href="styles/3-header.css">
+        <link rel="icon" href="images/icon.png">
     </head>
     <body>
-        <header></header>
+        <header>
+            <div class="logo">
+                <link rel="logo" href="images/logo.png">
+            </div>
+        </header>
         <footer>Best School</footer>
     </body>
 </html>
