--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <title>AirBnB Clone</title>
         <link rel="stylesheet" href="styles/3-common.css">
@@ -9,7 +10,6 @@
     <body>
         <header>
             <div class="logo">
-                <link rel="logo" href="images/logo.png">
             </div>
         </header>
         <footer>Best School</footer>
