Places information added to the website

--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -64,38 +64,71 @@
                     </h1>
                     <article>
                         <h2 id="placeName">
-                            Place one
+                            Eilla Villa
+                        </h2>
+                        <div class="price_by_night">$98</div>
+                        <div class="information">
+                            <span class="info_icon"></span>
+                            <div class="max_guest">
+                                2 Guest
+                            </div>
+                            <div class="number_room">
+                                2 Rooms
+                            </div>
+                            <div class="number_bathroom">
+                                2 Bathroom
+                            </div>
+                        </div>
+                        <div class="user">
+                            <p><b>Owner:</b> Eilaf Adil</p>
+                            <p>This room is the betst one ever; because it's made for only cool people.
+                                It has two bedrooms and two bathroom , what makes guests feel free to live in.
+                            </p>
+                        </div>
+                    </article>
+                    <article>
+                        <h2 id="placeName">
+                            House Rose
                         </h2>
                         <div class="price_by_night">$65</div>
                         <div class="information">
                             <div class="max_guest">
-                                4 Guest
+                                1 Guest
                             </div>
                             <div class="number_room">
-                                2 Rooms
+                                1 Room
                             </div>
                             <div class="number_bathroom">
                                 1 Bathroom
                             </div>
                         </div>
                         <div class="user">
-                            <p><b>Owner:</b> Eilaf Adil</p>
-                            <p>This room is the betst one ever.</p>
+                            <p><b>Owner:</b> Better Hetter</p>
+                            <p>This room is good for one guest as you can see here.
+                            </p>
                         </div>
                     </article>
                     <article>
                         <h2 id="placeName">
-                            Plase two
+                            Hill House
                         </h2>
-                        <div class="price_by_night">$65</div>
-                        <div class="information">Some  Info</div>
-                    </article>
-                    <article>
-                        <h2 id="placeName">
-                            Place three
-                        </h2>
-                        <div class="price_by_night">$65</div>
-                        <div class="information">Some  Info</div>
+                        <div class="price_by_night">$70</div>
+                        <div class="information">
+                            <div class="max_guest">
+                                3 Guest
+                            </div>
+                            <div class="number_room">
+                                3 Rooms
+                            </div>
+                            <div class="number_bathroom">
+                                1 Bathroom
+                            </div>
+                        </div>
+                        <div class="user">
+                            <p><b>Owner:</b> Marline Morly</p>
+                            <p>This room is good for freinds and students.
+                            </p>
+                        </div>
                     </article>
                     <!-- Price -->
                     
