Informations about places in cities and hotels

--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -30,11 +30,11 @@
                         </h4>
                         <ul class="popover">
                             <h2>Arizona:</h2>
-                            <li>Text Text</li>
-                            <li>Texty Texty</li>
+                            <li>Mill Avenue</li>
+                            <li>Old Town Scottsdale</li>
                             <h2>California</h2>
-                            <li>Textoo Textoo</li>
-                            <li>TXT TXT</li>
+                            <li>Rodeo Drive</li>
+                            <li>Hollywood Boulevard</li>
                         </ul>
                     </div>
                     <!-- Locations END -->
